[package]
name = "read_xlsx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.24.0"
chrono = "0.4.38"
csv = "1.3.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["tracing"] }
log = "0.4.21"
